holos/deploy/clusters/k3d-holos/components/quay/deployment-quay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: quay
  name: quay
  namespace: quay
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quay
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quay
    spec:
      containers:
      - env:
        - name: WORKER_COUNT_WEB
          value: "2"
        - name: WORKER_COUNT_REGISTRY
          value: "2"
        - name: WORKER_COUNT_SECSCAN
          value: "1"
        image: quay.io/projectquay/quay:3.17.3
        livenessProbe:
          httpGet:
            path: /health/instance
            port: 8080
          timeoutSeconds: 5
        name: quay
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health/instance
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            memory: 4Gi
          requests:
            cpu: 250m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /health/instance
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /conf/stack
          name: config
        - mountPath: /datastorage
          name: datastorage
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - configMap:
          name: quay-config-template
        name: config-template
      - emptyDir: {}
        name: config
      - name: datastorage
        persistentVolumeClaim:
          claimName: quay-datastorage
