holos/deploy/clusters/k3d-holos/components/quay/service-quay-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quay-redis
  name: quay-redis
  namespace: quay
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.kubernetes.io/name: quay-redis
