holos/deploy/clusters/k3d-holos/components/quay/service-quay.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quay
  name: quay
  namespace: quay
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: quay
