holos/deploy/clusters/k3d-holos/components/quay/httproute-quay-redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quay-redirect-http
  namespace: quay
spec:
  hostnames:
  - quay.holos.internal
  parentRefs:
  - name: default
    namespace: istio-gateways
    sectionName: http
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
