holos/deploy/clusters/k3d-holos/components/quay/httproute-quay.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quay
  namespace: quay
spec:
  hostnames:
  - quay.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-gateways
    sectionName: https
  rules:
  - backendRefs:
    - name: quay
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
