holos/deploy/clusters/k3d-holos/components/quay/serviceentry-auth-holos-localhost.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: auth-holos-localhost
  namespace: quay
spec:
  endpoints:
  - address: default-istio.istio-gateways.svc.cluster.local
  hosts:
  - auth.holos.localhost
  ports:
  - name: tls
    number: 443
    protocol: TLS
  resolution: DNS
